--- a/compose.yml
+++ b/compose.yml
@@ -1,8 +1,9 @@
-version: "2"
-
 services:
   app:
     image: chmez/synology
+    build: .
     container_name: synoregrenamer
     ports:
       - 18119:80
+    volumes:
+      - ./html:/var/www/html
